--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "clean_NIH_dataset.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOFWYj+dun60PDJ1H8zTWOF",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -62,16 +47,18 @@
         }
       },
       "source": [
-        "import os, urllib, glob, sys\n",
-        "from getpass import getpass\n",
+        "# import os, urllib, glob, sys\n",
+        "# from getpass import getpass\n",
         "\n",
-        "user = input('User name: ')\n",
-        "password = getpass('Password: ')\n",
-        "password = urllib.parse.quote(password) # your password is converted into url format\n",
-        "cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
+        "# user = input('User name: ')\n",
+        "# password = getpass('Password: ')\n",
+        "# password = urllib.parse.quote(password) # your password is converted into url format\n",
+        "# cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
         "\n",
-        "os.system(cmd_string)\n",
-        "cmd_string, password = \"\", \"\" # removing the password from the variable"
+        "# os.system(cmd_string)\n",
+        "# cmd_string, password = \"\", \"\" # removing the password from the variable\n",
+        "\n",
+        "# % cd '/content/AYP/code'"
       ],
       "execution_count": 1,
       "outputs": [
@@ -88,79 +75,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Edf0lX-Ou_0R",
-        "colab_type": "code",
-        "outputId": "9d487ceb-a5ba-4a83-ff86-310a3f2fd771",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "% cd '/content/AYP/code'"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP/code\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BvVNCgHRvOz8",
-        "colab_type": "code",
-        "outputId": "60ad747b-d72f-49ac-89de-0b33c1611171",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "!pip install boto"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: boto in /usr/local/lib/python3.6/dist-packages (2.49.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "08rEd1qi5Zne",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "''' Initializations '''\n",
+        "import os, sys, glob\n",
         "import re\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
+        "sys.path.append('./code/')\n",
         "import s3_functions\n",
-        "import numpy as np"
+        "\n",
+        "PATH = \"data/labeled_dataset/source_files/\"\n",
+        "FILE = 'NIH_precleaning.csv'\n",
+        "OUT_PATH = \"data/labeled_dataset/\"\n",
+        "OUT_FILE = 'NIH_postcleaning.csv'"
       ],
-      "execution_count": 0,
+      "execution_count": 78,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Vf7lKVq_M4X6",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Implementation"
-      ]
     },
     {
       "cell_type": "code",
@@ -170,11 +104,23 @@
         "colab": {}
       },
       "source": [
-        "df = s3_functions.get_dataframe_from_s3(file='NIH_precleaning.csv')\n",
-        "df.drop('Unnamed: 0',axis=1, inplace=True)"
+        "if os.path.exists(PATH + FILE):\n",
+        "    print(\"Getting local file...\")\n",
+        "    df = pd.read_csv(PATH+FILE)\n",
+        "    df.drop('Unnamed: 0',axis=1, inplace=True)\n",
+        "else:\n",
+        "    print(\"Getting File from S3...\")\n",
+        "    df = s3_functions.get_dataframe_from_s3(file=FILE)\n",
+        "    df.drop('Unnamed: 0',axis=1, inplace=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "File Exists...\n"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -191,21 +137,32 @@
         "print(df.head())\n",
         "print(df.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "       PMID PROJECT_NUMBER    FY    PI_IDS        PI_NAMEs\n",
-            "0  19415686    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;\n",
-            "1  19650110    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;\n",
-            "2  19283731    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;\n",
-            "3  19274753    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;\n",
-            "4  19479830    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;\n",
-            "(5273791, 5)\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "PMID PROJECT_NUMBER    FY ORG_STATE     PI_IDS  \\\n0  25782559    U01CI000333  2009        MO   1946136;   \n1  19803722    U01CI000333  2009        MO   1946136;   \n2  19335165    U01CI000333  2009        MO   1946136;   \n3  26267390    R01DA007031  2015        AZ  3105734;    \n4  26267390    R01DA007031  2009        OR   1870683;   \n\n                     PI_NAMEs  \n0        FRASER, VICTORIA J.;  \n1        FRASER, VICTORIA J.;  \n2        FRASER, VICTORIA J.;  \n3  LEMERY-CHALFANT, KATHRYN ;  \n4          DISHION, THOMAS J;  \n(4166119, 6)\n"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "       PMID PROJECT_NUMBER    FY ORG_STATE     PI_IDS  \\\n0  25782559    U01CI000333  2009        MO   1946136;   \n1  19803722    U01CI000333  2009        MO   1946136;   \n2  19335165    U01CI000333  2009        MO   1946136;   \n3  26267390    R01DA007031  2015        AZ  3105734;    \n4  26267390    R01DA007031  2009        OR   1870683;   \n\n                     PI_NAMEs  \n0        FRASER, VICTORIA J.;  \n1        FRASER, VICTORIA J.;  \n2        FRASER, VICTORIA J.;  \n3  LEMERY-CHALFANT, KATHRYN ;  \n4          DISHION, THOMAS J;  ",
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PMID</th>\n      <th>PROJECT_NUMBER</th>\n      <th>FY</th>\n      <th>ORG_STATE</th>\n      <th>PI_IDS</th>\n      <th>PI_NAMEs</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>25782559</td>\n      <td>U01CI000333</td>\n      <td>2009</td>\n      <td>MO</td>\n      <td>1946136;</td>\n      <td>FRASER, VICTORIA J.;</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>19803722</td>\n      <td>U01CI000333</td>\n      <td>2009</td>\n      <td>MO</td>\n      <td>1946136;</td>\n      <td>FRASER, VICTORIA J.;</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>19335165</td>\n      <td>U01CI000333</td>\n      <td>2009</td>\n      <td>MO</td>\n      <td>1946136;</td>\n      <td>FRASER, VICTORIA J.;</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>26267390</td>\n      <td>R01DA007031</td>\n      <td>2015</td>\n      <td>AZ</td>\n      <td>3105734;</td>\n      <td>LEMERY-CHALFANT, KATHRYN ;</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>26267390</td>\n      <td>R01DA007031</td>\n      <td>2009</td>\n      <td>OR</td>\n      <td>1870683;</td>\n      <td>DISHION, THOMAS J;</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
+      "source": [
+        "df.head()"
       ]
     },
     {
@@ -250,6 +207,8 @@
         "  input: A cell of df[\"PI_NAMEs\"]\n",
         "  output: cleaned version of each PI in \"PI_NAMEs\"\n",
         "  '''\n",
+        "  if type(name) != 'str':\n",
+        "    name = str(name)\n",
         "  name = name.lower()\n",
         "  names = name.split(';')\n",
         "\n",
@@ -283,7 +242,7 @@
         "\n",
         "  return new_name"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -296,7 +255,7 @@
       "source": [
         "df['cleaned_name'] = [clean_name(name) for name in df['PI_NAMEs']]"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -315,7 +274,7 @@
         "df['PI_IDS'] = [x.strip() for x in df['PI_IDS']]\n",
         "df['cleaned_name'] = [x.strip(',') for x in df['cleaned_name']]"
       ],
-      "execution_count": 0,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -327,9 +286,9 @@
       },
       "source": [
         "#drop duplicates\n",
-        "df.drop_duplicates(subset=['PMID','PROJECT_NUMBER','PI_IDS'],keep='first',inplace=True)"
+        "df.drop_duplicates(subset=['PMID','PROJECT_NUMBER','PI_IDS','ORG_STATE'],keep='first',inplace=True)"
       ],
-      "execution_count": 0,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -341,9 +300,9 @@
       },
       "source": [
         "df2 = df.copy()\n",
-        "df2 = df2[['PMID',\"PI_IDS\",\"cleaned_name\"]]"
+        "df2 = df2[['PMID',\"PI_IDS\",\"cleaned_name\",\"ORG_STATE\"]]"
       ],
-      "execution_count": 0,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -357,7 +316,7 @@
         "#change the delimeter in ids to , and not ;\n",
         "df2['PI_IDS'] = [re.sub(\";\", \",\",x.strip(\";\")) for x in df2['PI_IDS']]"
       ],
-      "execution_count": 0,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -374,7 +333,7 @@
         "df2['PI_IDS'] = [re.sub(\"[0-9]+ \\(contact\\)\",\"\",x) for x in df2['PI_IDS']]\n",
         "df2['PI_IDS'] = [x.strip(\",\") for x in df2['PI_IDS']]"
       ],
-      "execution_count": 0,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -391,7 +350,7 @@
         "idx_single_val = [\",\" not in x for x in df2[\"PI_IDS\"]]\n",
         "df_single = df2[idx_single_val]"
       ],
-      "execution_count": 0,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -403,9 +362,9 @@
       },
       "source": [
         "#breaks row with multiple values into multiple rows\n",
-        "df_multiple = df_multiple.set_index(['PMID']).apply(lambda x: x.str.split(',').explode()).reset_index()"
+        "df_multiple = df_multiple.set_index(['PMID','ORG_STATE']).apply(lambda x: x.str.split(',').explode()).reset_index()"
       ],
-      "execution_count": 0,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -419,7 +378,7 @@
         "merged_df = pd.concat([df_multiple,df_single])\n",
         "merged_df.drop_duplicates(keep=\"first\",inplace=True)"
       ],
-      "execution_count": 0,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -436,19 +395,15 @@
       "source": [
         "np.any(merged_df.duplicated())"
       ],
-      "execution_count": 102,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "False"
-            ]
+            "text/plain": "False"
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 102
+          "metadata": {},
+          "execution_count": 76
         }
       ]
     },
@@ -463,7 +418,7 @@
         "#Return the name back to ',' from '!'\n",
         "merged_df['cleaned_name'] = [re.sub(\"!\",\",\",x) for x in merged_df['cleaned_name']]"
       ],
-      "execution_count": 0,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -484,13 +439,28 @@
         "colab": {}
       },
       "source": [
-        "merged_df.to_csv(\"./NIH_postcleaning.csv\")\n",
-        "file = open(\"./NIH_postcleaning.csv\", 'r+', encoding='utf-8')\n",
-        "s3_functions.upload_to_s3(file=file,key = 'NIH_postcleaning.csv')\n",
+        "merged_df.to_csv(OUT_PATH + OUT_FILE)\n",
+        "file = open(OUT_PATH + OUT_FILE, 'r+', encoding='utf-8')\n",
+        "s3_functions.upload_to_s3(file=file,key = OUT_FILE)\n",
         "file.close()"
       ],
       "execution_count": 0,
       "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "clean_NIH_dataset.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyOFWYj+dun60PDJ1H8zTWOF",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
