--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -1,4 +1,19 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "clean_NIH_dataset.ipynb",
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -40,25 +55,25 @@
       "metadata": {
         "id": "72UixsP-uoMa",
         "colab_type": "code",
-        "outputId": "b74cf11f-1162-4ef8-be53-180b7200c604",
+        "outputId": "b8e8492c-b35f-4d88-f1f2-c7c0d7f35839",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 68
         }
       },
       "source": [
-        "# import os, urllib, glob, sys\n",
-        "# from getpass import getpass\n",
+        "import os, urllib, glob, sys\n",
+        "from getpass import getpass\n",
         "\n",
-        "# user = input('User name: ')\n",
-        "# password = getpass('Password: ')\n",
-        "# password = urllib.parse.quote(password) # your password is converted into url format\n",
-        "# cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
+        "user = input('User name: ')\n",
+        "password = getpass('Password: ')\n",
+        "password = urllib.parse.quote(password) # your password is converted into url format\n",
+        "cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
         "\n",
-        "# os.system(cmd_string)\n",
-        "# cmd_string, password = \"\", \"\" # removing the password from the variable\n",
+        "os.system(cmd_string)\n",
+        "cmd_string, password = \"\", \"\" # removing the password from the variable\n",
         "\n",
-        "# % cd '/content/AYP/code'"
+        "% cd '/content/AYP/code'"
       ],
       "execution_count": 1,
       "outputs": [
@@ -66,7 +81,8 @@
           "output_type": "stream",
           "text": [
             "User name: ShaulSolomon\n",
-            "Password: ··········\n"
+            "Password: ··········\n",
+            "/content/AYP/code\n"
           ],
           "name": "stdout"
         }
@@ -85,7 +101,7 @@
         "import re\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "sys.path.append('./code/')\n",
+        "#sys.path.append('./code/')\n",
         "import s3_functions\n",
         "\n",
         "PATH = \"data/labeled_dataset/source_files/\"\n",
@@ -93,7 +109,7 @@
         "OUT_PATH = \"data/labeled_dataset/\"\n",
         "OUT_FILE = 'NIH_postcleaning.csv'"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -101,7 +117,11 @@
       "metadata": {
         "id": "0tH6oPdvvHHf",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "87257c1a-fba7-4867-a77e-6ccbb848c506"
       },
       "source": [
         "if os.path.exists(PATH + FILE):\n",
@@ -111,14 +131,17 @@
         "else:\n",
         "    print(\"Getting File from S3...\")\n",
         "    df = s3_functions.get_dataframe_from_s3(file=FILE)\n",
-        "    df.drop('Unnamed: 0',axis=1, inplace=True)"
+        "    df.drop('Unnamed: 0',axis=1, inplace=True)\n",
+        "print(\"File recieved\")"
       ],
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "File Exists...\n"
+          "text": [
+            "Getting File from S3...\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -127,42 +150,33 @@
       "metadata": {
         "id": "4loiBND98HfO",
         "colab_type": "code",
-        "outputId": "9c27ab87-cbe3-4569-f5a6-f17973094598",
+        "outputId": "f48e1aca-b1d2-4cb3-a0c2-4759258618be",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 170
         }
       },
       "source": [
         "print(df.head())\n",
         "print(df.shape)"
       ],
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "PMID PROJECT_NUMBER    FY ORG_STATE     PI_IDS  \\\n0  25782559    U01CI000333  2009        MO   1946136;   \n1  19803722    U01CI000333  2009        MO   1946136;   \n2  19335165    U01CI000333  2009        MO   1946136;   \n3  26267390    R01DA007031  2015        AZ  3105734;    \n4  26267390    R01DA007031  2009        OR   1870683;   \n\n                     PI_NAMEs  \n0        FRASER, VICTORIA J.;  \n1        FRASER, VICTORIA J.;  \n2        FRASER, VICTORIA J.;  \n3  LEMERY-CHALFANT, KATHRYN ;  \n4          DISHION, THOMAS J;  \n(4166119, 6)\n"
+          "text": [
+            "       PMID PROJECT_NUMBER  ...     PI_IDS                    PI_NAMEs\n",
+            "0  25782559    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
+            "1  19803722    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
+            "2  19335165    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
+            "3  26267390    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
+            "4  26267390    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
+            "\n",
+            "[5 rows x 6 columns]\n",
+            "(5273791, 6)\n"
+          ],
+          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 30,
-      "metadata": {},
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "       PMID PROJECT_NUMBER    FY ORG_STATE     PI_IDS  \\\n0  25782559    U01CI000333  2009        MO   1946136;   \n1  19803722    U01CI000333  2009        MO   1946136;   \n2  19335165    U01CI000333  2009        MO   1946136;   \n3  26267390    R01DA007031  2015        AZ  3105734;    \n4  26267390    R01DA007031  2009        OR   1870683;   \n\n                     PI_NAMEs  \n0        FRASER, VICTORIA J.;  \n1        FRASER, VICTORIA J.;  \n2        FRASER, VICTORIA J.;  \n3  LEMERY-CHALFANT, KATHRYN ;  \n4          DISHION, THOMAS J;  ",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PMID</th>\n      <th>PROJECT_NUMBER</th>\n      <th>FY</th>\n      <th>ORG_STATE</th>\n      <th>PI_IDS</th>\n      <th>PI_NAMEs</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>25782559</td>\n      <td>U01CI000333</td>\n      <td>2009</td>\n      <td>MO</td>\n      <td>1946136;</td>\n      <td>FRASER, VICTORIA J.;</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>19803722</td>\n      <td>U01CI000333</td>\n      <td>2009</td>\n      <td>MO</td>\n      <td>1946136;</td>\n      <td>FRASER, VICTORIA J.;</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>19335165</td>\n      <td>U01CI000333</td>\n      <td>2009</td>\n      <td>MO</td>\n      <td>1946136;</td>\n      <td>FRASER, VICTORIA J.;</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>26267390</td>\n      <td>R01DA007031</td>\n      <td>2015</td>\n      <td>AZ</td>\n      <td>3105734;</td>\n      <td>LEMERY-CHALFANT, KATHRYN ;</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>26267390</td>\n      <td>R01DA007031</td>\n      <td>2009</td>\n      <td>OR</td>\n      <td>1870683;</td>\n      <td>DISHION, THOMAS J;</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ],
-      "source": [
-        "df.head()"
       ]
     },
     {
@@ -242,7 +256,7 @@
         "\n",
         "  return new_name"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -255,7 +269,7 @@
       "source": [
         "df['cleaned_name'] = [clean_name(name) for name in df['PI_NAMEs']]"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -274,7 +288,7 @@
         "df['PI_IDS'] = [x.strip() for x in df['PI_IDS']]\n",
         "df['cleaned_name'] = [x.strip(',') for x in df['cleaned_name']]"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -288,7 +302,7 @@
         "#drop duplicates\n",
         "df.drop_duplicates(subset=['PMID','PROJECT_NUMBER','PI_IDS','ORG_STATE'],keep='first',inplace=True)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -302,7 +316,7 @@
         "df2 = df.copy()\n",
         "df2 = df2[['PMID',\"PI_IDS\",\"cleaned_name\",\"ORG_STATE\"]]"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -316,7 +330,7 @@
         "#change the delimeter in ids to , and not ;\n",
         "df2['PI_IDS'] = [re.sub(\";\", \",\",x.strip(\";\")) for x in df2['PI_IDS']]"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -333,7 +347,7 @@
         "df2['PI_IDS'] = [re.sub(\"[0-9]+ \\(contact\\)\",\"\",x) for x in df2['PI_IDS']]\n",
         "df2['PI_IDS'] = [x.strip(\",\") for x in df2['PI_IDS']]"
       ],
-      "execution_count": 71,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -350,7 +364,7 @@
         "idx_single_val = [\",\" not in x for x in df2[\"PI_IDS\"]]\n",
         "df_single = df2[idx_single_val]"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -364,7 +378,7 @@
         "#breaks row with multiple values into multiple rows\n",
         "df_multiple = df_multiple.set_index(['PMID','ORG_STATE']).apply(lambda x: x.str.split(',').explode()).reset_index()"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -378,7 +392,7 @@
         "merged_df = pd.concat([df_multiple,df_single])\n",
         "merged_df.drop_duplicates(keep=\"first\",inplace=True)"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -386,24 +400,28 @@
       "metadata": {
         "id": "uopDp1FDpVrk",
         "colab_type": "code",
+        "outputId": "71108897-1389-42d8-c519-a24de71550e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6a977ea6-ffb9-4b19-b3f9-7b3d81125c11"
+        }
       },
       "source": [
         "np.any(merged_df.duplicated())"
       ],
-      "execution_count": 76,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "False"
+            "text/plain": [
+              "False"
+            ]
           },
-          "metadata": {},
-          "execution_count": 76
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
         }
       ]
     },
@@ -418,7 +436,7 @@
         "#Return the name back to ',' from '!'\n",
         "merged_df['cleaned_name'] = [re.sub(\"!\",\",\",x) for x in merged_df['cleaned_name']]"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -446,21 +464,19 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GPdaPQGJmyCi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "name": "clean_NIH_dataset.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOFWYj+dun60PDJ1H8zTWOF",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
